Updated EncryptionUtil